--- a/public/index.html
+++ b/public/index.html
@@ -26,23 +26,27 @@
     <script src="lib/angular-animate/angular-animate.min.js"></script>
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
 
-
     <!-- Other scripts -->
     <script src="scripts/webcam.js"></script>
     <script src="scripts/MediaStreamRecorder.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 
-    <!--
-    <script src="lib/webcam-directive/dist/webcam.min.js"></script>
-    -->
     <!-- application -->
     <script src="app/app.js"></script>
     <script src="app/controllers/home-controller.js"></script>
+    <script src="app/controllers/viewer-controller.js"></script>
     <script src="app/services/upload-data-service.js"></script>
     <script src="app/directives/auto-refresh.js"></script>
+    <script src="app/providers/angular-socket.js"></script>
 
     <!-- bootstrap responsive stuff -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- test test -->
+    <script>
+      var socket = io();
+    </script>
 
 </body>
 </html>
