--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <title>Razor - Webcam app</title>
 
     <!-- libs -->
-    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- App -->
     <link href="styles/global.css" rel="stylesheet" />
@@ -17,26 +18,49 @@
 </head>
 <body>
 
-    <!-- dynamic content -->
-    <div ui-view="content"></div>
+    <div id="wrap">
+        <div class="container">
+
+            <div class="page-header">
+                <h1>Layla Home Cam</h1>
+                <p class="page-header-paragraph">Watching what the dog does</a></p>
+                <p class="muted credit">Built on Node, Angular, Socket.io</p>
+            </div>
+
+            <!-- dynamic content -->
+            <div ui-view="content"></div>
+
+        </div>
+    </div>
+
+    <!-- Footer -->
+
+    <div id="footer">
+        <div class="container">
+            <p class="muted credit">Razor Industries.</p>
+        </div>
+    </div>
 
     <!-- App libs -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="lib/angular-animate/angular-animate.min.js"></script>
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
-
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="lib/ng-lodash/build/ng-lodash.min.js"></script>
+    <!--
+    <script src="lib/webcam-directive/dist/webcam.min.js"></script>
+    -->
+    
     <!-- Other scripts -->
-    <script src="scripts/webcam.js"></script>
-    <script src="scripts/MediaStreamRecorder.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="/scripts/webcam.js"></script>
 
     <!-- application -->
     <script src="app/app.js"></script>
-    <script src="app/controllers/home-controller.js"></script>
     <script src="app/controllers/viewer-controller.js"></script>
-    <script src="app/services/upload-data-service.js"></script>
-    <script src="app/directives/auto-refresh.js"></script>
+    <script src="app/directives/video-canvas.js"></script>
     <script src="app/providers/angular-socket.js"></script>
 
     <!-- bootstrap responsive stuff -->
